--- a/index.html
+++ b/index.html
@@ -3,38 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Nimbly</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container header__container">
-        <div class="logo">
-          <a href="#">
-            <img src="images/logo.svg" width="148" alt="" />
-          </a>
-        </div>
-        <!-- <input class="check1" type="checkbox" id="check" /> -->
-        <nav class="nav">
-          <ul>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Industries</a></li>
-            <li><a href="#">Insight </a></li>
-          </ul>
-        </nav>
-        <div class="sign">
-          <a href="#"><img src="images/person.svg" alt="" /></a>
-          <a href="#">Sign In</a>
-        </div>
-        <a href="#">Request Demo</a>
-        <!-- <label for="check">
+    <div class="block">
+      <header class="header">
+        <div class="container header__container">
+          <div class="logo">
+            <a href="#">
+              <img src="images/logo.svg" width="148" alt="" />
+            </a>
+          </div>
+          <!-- <input class="check1" type="checkbox" id="check" /> -->
+          <nav class="nav">
+            <ul>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">How it works</a></li>
+              <li><a href="#">Industries</a></li>
+              <li><a href="#">Insight </a></li>
+            </ul>
+          </nav>
+          <div class="header-div">
+            <div class="sign">
+              <a href="#"><img src="images/person.svg" alt="" /></a>
+              <a href="#">Sign In</a>
+            </div>
+            <a class="header__btn" href="#">Request Demo</a>
+          </div>
+          <!-- <label for="check">
           <img class="menu" src="images/menu.svg" alt=""
         /></label> -->
-      </div>
-
+        </div>
+      </header>
       <div class="hero">
-        <div class="container hero__container"></div>
+        <div class="container hero__container">
+          <div class="herro">
+            <div>
+              <h1>
+                Make your operations Easier and Efficient with
+                <span>Nimbly</span>
+              </h1>
+              <p>
+                Digitize your business operations and gain real-time analytics
+                on your team progress anytime, anywhere.
+              </p>
+              <div class="hero-bottom">
+                <a class="header__btn" href="#">Request Demo</a>
+                <div>
+                  <a href="#"
+                    ><img src="images/phone.svg" alt="" /> Free Consultation</a
+                  >
+                </div>
+              </div>
+            </div>
+            <img class="hero-photo" src="images/hero.png" alt="" />
+          </div>
+          <p class="trust">
+            Trusted by 10,000+ the world’s fastest growing companies including:
+          </p>
+          <div class="company">
+            <a href="#"><img src="images/kfc.svg" alt="kfc" /></a>
+            <a href="#"><img src="images/cargill.svg" alt="cargill" /></a>
+            <a href="#"><img src="images/7elven.svg" alt="7elven" /></a>
+            <a href="#"
+              ><img src="images/underarmour.svg" alt="underarmour"
+            /></a>
+            <a href="#"><img src="images/dq.svg" alt="dq" /></a>
+            <a href="#"><img src="images/toto.svg" alt="toto" /></a>
+          </div>
+        </div>
       </div>
-    </header>
+    </div>
   </body>
 </html>
