--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <img src="images/logo.svg" width="148" alt="" />
             </a>
           </div>
-          <!-- <input class="check1" type="checkbox" id="check" /> -->
+          <input class="check" type="checkbox" id="check" />
           <nav class="nav">
             <ul>
               <li><a href="#">Features</a></li>
@@ -24,6 +24,7 @@
               <li><a href="#">Insight </a></li>
             </ul>
           </nav>
+          <input class="check1" type="checkbox" id="check1" />
           <div class="header-div">
             <div class="sign">
               <a href="#"><img src="images/person.svg" alt="" /></a>
@@ -31,9 +32,12 @@
             </div>
             <a class="header__btn" href="#">Request Demo</a>
           </div>
-          <!-- <label for="check">
-          <img class="menu" src="images/menu.svg" alt=""
-        /></label> -->
+          <label for="check">
+            <img class="menu" src="images/menu.svg" alt=""
+          /></label>
+          <label for="check1">
+            <img class="person1" src="images/person1.svg" alt=""
+          /></label>
         </div>
       </header>
       <div class="hero">
@@ -52,7 +56,8 @@
                 <a class="header__btn" href="#">Request Demo</a>
                 <div>
                   <a href="#"
-                    ><img src="images/phone.svg" alt="" /> Free Consultation</a
+                    ><img src="images/phone.svg" alt="" class="call" />
+                    <span> Free Consultation </span></a
                   >
                 </div>
               </div>
