--- a/index.html
+++ b/index.html
@@ -7,70 +7,77 @@
     <title>Nimbly</title>
   </head>
   <body>
-    <div class="block">
-      <header class="header">
-        <div class="container header__container">
-          <div class="logo">
-            <a href="#">
-              <img src="images/logo.svg" width="148" alt="" />
-            </a>
-          </div>
-          <input class="check" type="checkbox" id="check" />
-          <nav class="nav">
-            <ul>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">Industries</a></li>
-              <li><a href="#">Insight </a></li>
-            </ul>
-          </nav>
-          <input class="check1" type="checkbox" id="check1" />
-          <div class="header-div">
-            <div class="sign">
-              <a href="#"><img src="images/person.svg" alt="" /></a>
-              <a href="#">Sign In</a>
-            </div>
-            <a class="header__btn" href="#">Request Demo</a>
-          </div>
-          <label for="check">
-            <img class="menu" src="images/menu.svg" alt=""
-          /></label>
-          <label for="check1">
-            <img class="person1" src="images/person1.svg" alt=""
-          /></label>
+    <!-- Header section -->
+
+    <header class="header">
+      <div class="container header__container">
+        <div class="logo">
+          <a href="#">
+            <img src="images/logo.svg" width="148" alt="" />
+          </a>
         </div>
-      </header>
-      <div class="hero">
-        <div class="container hero__container">
-          <div class="herro">
-            <div>
-              <h1>
-                Make your operations Easier and Efficient with
-                <span>Nimbly</span>
-              </h1>
-              <p>
-                Digitize your business operations and gain real-time analytics
-                on your team progress anytime, anywhere.
-              </p>
-              <div class="hero-bottom">
-                <a class="header__btn" href="#">Request Demo</a>
-                <div>
-                  <a href="#"
-                    ><img src="images/phone.svg" alt="" class="call" />
-                    <span> Free Consultation </span></a
-                  >
-                </div>
+        <input class="check" type="checkbox" id="check" />
+        <nav class="nav">
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Industries</a></li>
+            <li><a href="#">Insight </a></li>
+          </ul>
+        </nav>
+        <input class="check1" type="checkbox" id="check1" />
+        <div class="header-div">
+          <div class="sign">
+            <a href="#"><img src="images/person.svg" alt="" /></a>
+            <a href="#">Sign In</a>
+          </div>
+          <a class="header__btn" href="#">Request Demo</a>
+        </div>
+        <label for="check">
+          <img class="menu" src="images/menu.svg" alt=""
+        /></label>
+        <label for="check1">
+          <img class="person1" src="images/person1.svg" alt=""
+        /></label>
+      </div>
+    </header>
+
+    <!-- Hero section -->
+
+    <div class="hero">
+      <div class="container hero__container">
+        <div class="herro">
+          <div>
+            <h1>
+              Make your operations Easier and Efficient with
+              <span>Nimbly</span>
+            </h1>
+            <p>
+              Digitize your business operations and gain real-time analytics on
+              your team progress anytime, anywhere.
+            </p>
+            <div class="hero-bottom">
+              <a class="header__btn" href="#">Request Demo</a>
+              <div>
+                <a href="#"
+                  ><img src="images/phone.svg" alt="" class="call" />
+                  <span> Free Consultation </span></a
+                >
               </div>
             </div>
-            <img class="hero-photo" src="images/hero.png" alt="" />
           </div>
-          <p class="trust">
-            Trusted by 10,000+ the world’s fastest growing companies including:
-          </p>
-          <div class="company">
+          <img class="hero-photo" src="images/hero.png" alt="" />
+        </div>
+        <p class="trust">
+          Trusted by 10,000+ the world’s fastest growing companies including:
+        </p>
+        <div class="company">
+          <div>
             <a href="#"><img src="images/kfc.svg" alt="kfc" /></a>
             <a href="#"><img src="images/cargill.svg" alt="cargill" /></a>
             <a href="#"><img src="images/7elven.svg" alt="7elven" /></a>
+          </div>
+          <div>
             <a href="#"
               ><img src="images/underarmour.svg" alt="underarmour"
             /></a>
